--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "grismen-md",
+  "name": "santana-md",
   "version": "1.0.0",
-  "description": "Bot WhatsApp X-MD - 𝙜𝙧𝙞𝙨𝙢𝙚𝙣-𝙈𝘿",
+  "description": "Bot WhatsApp Multi-fonctions 𝗦𝗔𝗡𝗧𝗔𝗡𝗔-𝗠𝗗",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
+  "keywords": [
+    "whatsapp-bot",
+    "multi-fonction",
+    "santana-md"
+  ],
   "author": "grismen-sexy",
   "license": "MIT",
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.5.0",
-    "chalk": "^4.1.2",
-    "ffmpeg-static": "^4.4.0",
-    "figlet": "^1.5.2",
-    "form-data": "^4.0.0",
-    "got": "^11.8.2",
-    "jimp": "^0.16.1",
-    "moment-timezone": "^0.5.34",
+    "@whiskeysockets/baileys": "^6.4.0",
+    "pino": "^8.0.0",
+    "chalk": "^5.0.0",
+    "dotenv": "^16.0.0",
+    "axios": "^1.3.0",
+    "ffmpeg-static": "^5.1.0",
     "node-fetch": "^2.6.7",
-    "qrcode-terminal": "^0.12.0"
+    "moment": "^2.29.4",
+    "form-data": "^4.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
